--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:full": "concurrently \"cd ../backend && source .venv/bin/activate && python main.py\" \"pnpm dev\""
   },
   "dependencies": {
+    "buffer": "6.0.3",
+    "plotly.js": "^2.27.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "plotly.js": "^2.27.0"
+    "stream-browserify": "3.0.0",
+    "util": "0.12.5"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
@@ -20,6 +24,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "concurrently": "9.2.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
