--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,15 @@
     "dev:full": "concurrently \"cd ../backend && source .venv/bin/activate && python main.py\" \"pnpm dev\""
   },
   "dependencies": {
+    "@dnd-kit/core": "6.3.1",
+    "@dnd-kit/sortable": "10.0.0",
+    "@dnd-kit/utilities": "3.2.2",
     "buffer": "6.0.3",
     "plotly.js": "^2.27.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "1.5.2",
+    "react-resizable": "3.0.5",
     "stream-browserify": "3.0.0",
     "util": "0.12.5"
   },
@@ -22,6 +27,7 @@
     "@types/plotly.js": "^2.12.29",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-grid-layout": "1.3.5",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "concurrently": "9.2.0",
