--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-grid-layout": "1.5.2",
     "react-resizable": "3.0.5",
     "stream-browserify": "3.0.0",
-    "util": "0.12.5"
+    "util": "0.12.5",
+    "zustand": "5.0.8"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
