--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "@dnd-kit/core": "6.3.1",
     "@dnd-kit/sortable": "10.0.0",
     "@dnd-kit/utilities": "3.2.2",
+    "@tsparticles/engine": "3.9.1",
+    "@tsparticles/react": "3.0.0",
+    "@tsparticles/slim": "3.9.1",
     "buffer": "6.0.3",
     "plotly.js": "^2.27.0",
     "react": "^18.3.1",
@@ -20,6 +23,7 @@
     "react-grid-layout": "1.5.2",
     "react-resizable": "3.0.5",
     "stream-browserify": "3.0.0",
+    "tsparticles": "3.9.1",
     "util": "0.12.5",
     "zustand": "5.0.8"
   },
