--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,22 @@
     "@dnd-kit/core": "6.3.1",
     "@dnd-kit/sortable": "10.0.0",
     "@dnd-kit/utilities": "3.2.2",
+    "@react-sigma/core": "5.0.4",
+    "@spin-network/graph-core": "file:/Users/deepak/code/spin-network-app/packages/graph-core",
     "@tsparticles/engine": "3.9.1",
     "@tsparticles/react": "3.0.0",
     "@tsparticles/slim": "3.9.1",
     "buffer": "6.0.3",
+    "graphology": "0.26.0",
+    "graphology-generators": "0.11.2",
+    "graphology-types": "0.24.8",
+    "mathjs": "14.6.0",
     "plotly.js": "^2.27.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-grid-layout": "1.5.2",
     "react-resizable": "3.0.5",
+    "sigma": "3.0.2",
     "stream-browserify": "3.0.0",
     "tsparticles": "3.9.1",
     "util": "0.12.5",
