--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "dev:full": "concurrently \"cd ../backend && source .venv/bin/activate && python main.py\" \"pnpm dev\""
+    "dev:full": "concurrently \"cd ../backend && source .venv/bin/activate && python main.py\" \"pnpm dev\"",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@dnd-kit/core": "6.3.1",
@@ -30,21 +32,27 @@
     "react-resizable": "3.0.5",
     "sigma": "3.0.2",
     "stream-browserify": "3.0.0",
+    "three": "0.179.1",
     "tsparticles": "3.9.1",
     "util": "0.12.5",
     "zustand": "5.0.8"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^22.0.0",
     "@types/plotly.js": "^2.12.29",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-grid-layout": "1.3.5",
+    "@types/three": "0.179.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "concurrently": "9.2.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
   },
