--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/core": "6.3.1",
     "@dnd-kit/sortable": "10.0.0",
     "@dnd-kit/utilities": "3.2.2",
+    "@heroicons/react": "2.2.0",
     "@react-sigma/core": "5.0.4",
     "@spin-network/graph-core": "file:/Users/deepak/code/spin-network-app/packages/graph-core",
     "@tsparticles/engine": "3.9.1",
