feat: add graph-core and graph-ui packages, update vercel config
- Copy graph-core and graph-ui packages from spin-network-app
- Update frontend package.json to use local graph-core dependency
- Add vercel.json configuration for deployment

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,11 @@
     "@dnd-kit/utilities": "3.2.2",
     "@heroicons/react": "2.2.0",
     "@react-sigma/core": "5.0.4",
-    "@spin-network/graph-core": "file:/Users/deepak/code/spin-network-app/packages/graph-core",
+
     "@tsparticles/engine": "3.9.1",
     "@tsparticles/react": "3.0.0",
     "@tsparticles/slim": "3.9.1",
+    "@spin-network/graph-core": "file:../packages/graph-core",
     "buffer": "6.0.3",
     "graphology": "0.26.0",
     "graphology-generators": "0.11.2",
