--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
-  "buildCommand": "cd frontend && pnpm install && pnpm build",
-  "outputDirectory": "frontend/dist",
-  "installCommand": "cd frontend && pnpm install",
-  "devCommand": "cd frontend && pnpm dev",
+  "buildCommand": "pnpm install && pnpm build",
+  "outputDirectory": "dist",
+  "installCommand": "pnpm install",
+  "devCommand": "pnpm dev",
   "framework": null,
+  "rootDirectory": "frontend",
   "rewrites": [
     {
       "source": "/(.*)",
