--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "plotly.js": "^2.27.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-rnd": "^10.4.1",
     "react-grid-layout": "1.5.2",
     "react-resizable": "3.0.5",
     "sigma": "3.0.2",
