feat(pde): C2a, C11 - Add boundary condition testing infrastructure
- Implement Jest configuration for WebGL shader testing
- Add test suites for boundary conditions and solver shaders
- Create boundary condition strategy pattern with Neumann/Dirichlet support
- Integrate BC strategies with solver implementations
- Add shader code generation for boundary-aware texture sampling
- Created task C11 for testing; updating memory bank and implementation docs

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "dev:full": "concurrently \"cd ../backend && source .venv/bin/activate && python main.py\" \"pnpm dev\"",
     "test": "jest",
+    "test:boundary": "jest boundaryConditions.test.ts",
     "test:watch": "jest --watch"
   },
   "dependencies": {
