--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,22 +17,23 @@
     "@dnd-kit/utilities": "3.2.2",
     "@heroicons/react": "2.2.0",
     "@react-sigma/core": "5.0.4",
-
+    "@spin-network/graph-core": "file:../packages/graph-core",
     "@tsparticles/engine": "3.9.1",
     "@tsparticles/react": "3.0.0",
     "@tsparticles/slim": "3.9.1",
-    "@spin-network/graph-core": "file:../packages/graph-core",
     "buffer": "6.0.3",
     "graphology": "0.26.0",
     "graphology-generators": "0.11.2",
     "graphology-types": "0.24.8",
     "mathjs": "14.6.0",
+    "plotly": "1.0.6",
     "plotly.js": "^2.27.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-rnd": "^10.4.1",
     "react-grid-layout": "1.5.2",
+    "react-plotly": "1.0.0",
     "react-resizable": "3.0.5",
+    "react-rnd": "^10.4.1",
     "sigma": "3.0.2",
     "stream-browserify": "3.0.0",
     "three": "0.179.1",
@@ -59,5 +60,5 @@
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
   },
-  "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
+  "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
