--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@tsparticles/react": "3.0.0",
     "@tsparticles/slim": "3.9.1",
     "buffer": "6.0.3",
+    "expr-eval": "2.0.2",
     "graphology": "0.26.0",
     "graphology-generators": "0.11.2",
     "graphology-types": "0.24.8",
