--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-grid-layout": "1.5.2",
-    "react-plotly": "1.0.0",
+    "react-plotly.js": "2.6.0",
     "react-resizable": "3.0.5",
     "react-rnd": "^10.4.1",
     "sigma": "3.0.2",
