feat(gpu): C16 - implement GPU.IO Phase 1 infrastructure for particle physics
- Add GPUParticleManager with GPU.IO composer, position/velocity layers
- Integrate GLSL position update shader for particle movement
- Add GPU/CPU toggle in animation loop with runtime switching
- Implement GPU-tsParticles synchronization for rendering
- Add useGPU state with persistence in Zustand store
- Add purple GPU/CPU toggle button in RandomWalkSim header
- Add console logging for GPU operations
- Updated memory and implementation doc

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@tsparticles/slim": "3.9.1",
     "buffer": "6.0.3",
     "expr-eval": "2.0.2",
+    "gpu-io": "0.2.7",
     "graphology": "0.26.0",
     "graphology-generators": "0.11.2",
     "graphology-types": "0.24.8",
