feat: add clean script to frontend package to fix "frozen lockfile" compilation error on vercel

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "dev:full": "concurrently \"cd ../backend && source .venv/bin/activate && python main.py\" \"pnpm dev\"",
     "test": "pnpm exec vitest run",
-    "test:watch": "vitest --watch"
+    "test:watch": "vitest --watch",
+    "clean": "rm -rf node_modules dist"
   },
   "dependencies": {
     "@dnd-kit/core": "6.3.1",
