--- a/packages/graph-core/package.json
+++ b/packages/graph-core/package.json
@@ -6,8 +6,16 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./src/*": "./src/*"
+  },
   "scripts": {
-    "build": "tsc && vite build",
+    "build": "vite build",
     "test": "vitest run",
     "lint": "eslint src --ext .ts",
     "clean": "rimraf dist"
@@ -37,6 +45,7 @@
     "@types/papaparse": "5.3.16",
     "typescript": "5.9.2",
     "vite": "^6.0.0",
+    "vite-plugin-dts": "^4.3.0",
     "vitest": "3.2.4"
   },
   "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
