fix: update tsconfig for project references and workspace module support

--- a/packages/ts-quantum/tsconfig.json
+++ b/packages/ts-quantum/tsconfig.json
@@ -6,7 +6,9 @@
     "moduleResolution": "node",
     "strict": true,
     "sourceMap": true,
+    "composite": true,
     "declaration": true,
+    "declarationMap": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "outDir": "dist",
