--- a/packages/graph-core/package.json
+++ b/packages/graph-core/package.json
@@ -38,13 +38,13 @@
     "rehype-sanitize": "6.0.0",
     "remark-gfm": "4.0.1",
     "remark-math": "6.0.0",
-    "sigma": "3.0.1"
+    "sigma": "3.0.1",
+    "vite": "^6.0.0"
   },
   "devDependencies": {
     "@types/lodash": "4.17.17",
     "@types/papaparse": "5.3.16",
     "typescript": "5.9.2",
-    "vite": "^6.0.0",
     "vite-plugin-dts": "^4.3.0",
     "vitest": "3.2.4"
   },
