--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "cd ../packages/graph-core && pnpm build && cd ../../frontend && tsc -b && vite build",
+    "build": "cd ../packages/ts-quantum && pnpm build && cd ../graph-core && pnpm build && cd ../../frontend && tsc -b && vite build",
     "preview": "vite preview",
     "dev:full": "concurrently \"cd ../backend && source .venv/bin/activate && python main.py\" \"pnpm dev\"",
     "test": "pnpm exec vitest run",
@@ -19,6 +19,7 @@
     "@heroicons/react": "2.2.0",
     "@react-sigma/core": "5.0.4",
     "@spin-network/graph-core": "file:../packages/graph-core",
+    "ts-quantum": "file:../packages/ts-quantum",
     "@tsparticles/engine": "3.9.1",
     "@tsparticles/react": "3.0.0",
     "@tsparticles/slim": "3.9.1",
@@ -51,6 +52,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-grid-layout": "1.3.5",
+    "@types/react-plotly.js": "2.6.4",
     "@types/three": "0.179.0",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/ui": "3.2.4",
