--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -8,6 +8,8 @@
     "skipLibCheck": true,
     "types": ["vitest/globals"],
 
+    "noImplicitAny": false,
+
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -18,7 +20,7 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
+    "strict": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     // "erasableSyntaxOnly": true,  // Temporarily disabled
