feat: move vercel.json to monorepo root with multi-package build pipeline
- Relocate vercel.json from frontend/ to repository root for monorepo deployment
- Update buildCommand to build ts-quantum, graph-core, and frontend packages in dependency order
- Change outputDirectory from dist to frontend/dist to match monorepo structure
- Update devCommand to use pnpm workspace filter for frontend package
- Maintain existing rewrites configuration for SPA routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-  "buildCommand": "pnpm install && pnpm build",
-  "outputDirectory": "dist",
-  "installCommand": "pnpm install",
-  "devCommand": "pnpm dev",
+  "buildCommand": "cd packages/ts-quantum && pnpm build && cd ../graph-core && pnpm build && cd ../frontend && tsc -b && vite build",
+  "outputDirectory": "frontend/dist",
+  "devCommand": "pnpm --filter qc-diffusion-frontend dev",
   "framework": null,
   "rewrites": [
     {
