fix(vercel): correct path navigation from graph-core to frontend in build command
Changed `cd ../frontend` to `cd ../../frontend` to properly navigate from packages/graph-core to frontend directory in monorepo structure and fix build loop error

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd packages/ts-quantum && pnpm build && cd ../graph-core && pnpm build && cd ../frontend && tsc -b && vite build",
+  "buildCommand": "cd packages/ts-quantum && pnpm build && cd ../graph-core && pnpm build && cd ../../frontend && tsc -b && vite build",
   "outputDirectory": "frontend/dist",
   "devCommand": "pnpm --filter qc-diffusion-frontend dev",
   "framework": null,
