--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "buildCommand": "cd packages/ts-quantum && pnpm build && cd ../graph-core && pnpm build && cd ../../frontend && tsc -b && vite build",
-  "outputDirectory": "frontend/dist",
+  "buildCommand": "pnpm build",
   "devCommand": "pnpm --filter qc-diffusion-frontend dev",
   "framework": null,
   "rewrites": [
