--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "buildCommand": "pnpm build",
+  "outputDirectory": "frontend/dist",
   "devCommand": "pnpm --filter qc-diffusion-frontend dev",
   "framework": null,
   "rewrites": [
