fix(imports): update ts-quantum import path from relative to package name and restore frozen-lockfile install in Vercel config
Changed QuantumWalkPage.tsx to use 'ts-quantum' package import instead of relative path '../../packages/ts-quantum/src', and added explicit frozen-lockfile flag to Vercel installCommand for deterministic builds

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "installCommand": "pnpm install --frozen-lockfile",
   "buildCommand": "pnpm build",
   "outputDirectory": "frontend/dist",
   "devCommand": "pnpm --filter qc-diffusion-frontend dev",
