--- a/packages/ts-quantum/package.json
+++ b/packages/ts-quantum/package.json
@@ -2,15 +2,15 @@
   "name": "ts-quantum",
   "version": "0.9.0",
   "description": "TypeScript library for quantum mechanics calculations and utilities",
-  "module": "dist/esm/index.mjs",
   "main": "dist/index.js",
+  "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/esm/index.mjs",
+      "import": "./dist/esm/index.js",
       "require": "./dist/index.js",
-      "default": "./dist/esm/index.mjs"
+      "default": "./dist/esm/index.js"
     }
   },
   "author": {
@@ -38,7 +38,7 @@
   },
   "homepage": "https://github.com/space-cadet/ts-quantum#readme",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig.esm.json",
     "clean": "rm -rf dist node_modules coverage",
     "test": "vitest run",
     "test:watch": "vitest watch",
