fix(graph-core): standardize CJS output extension to .cjs and add build permissions
- Change graph-core CJS output from .js to .cjs in package.json exports and vite.config.ts
- Add Claude permissions for node, pnpm graph-core build, and npx vite build commands
- Add .vercel directory to .gitignore

--- a/packages/graph-core/package.json
+++ b/packages/graph-core/package.json
@@ -2,7 +2,7 @@
   "name": "@spin-network/graph-core",
   "version": "0.1.0",
   "description": "Abstract graph structures for spin networks",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "type": "module",
@@ -10,7 +10,7 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.cjs"
     },
     "./src/*": "./src/*"
   },
