fix(deps): remove git submodules and convert to workspace protocol for local packages
- Remove DynamicalBilliards.jl and visual-pde git submodules
- Convert frontend dependencies from file: to workspace: protocol for graph-core and ts-quantum packages
- Add Claude permissions for git config and git rm commands in .claude/settings.local.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,8 @@
     "@dnd-kit/utilities": "3.2.2",
     "@heroicons/react": "2.2.0",
     "@react-sigma/core": "5.0.4",
-    "@spin-network/graph-core": "file:../packages/graph-core",
-    "ts-quantum": "file:../packages/ts-quantum",
+    "@spin-network/graph-core": "workspace:*",
+    "ts-quantum": "workspace:*",
     "@tsparticles/engine": "3.9.1",
     "@tsparticles/react": "3.0.0",
     "@tsparticles/slim": "3.9.1",
