--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "installCommand": "pnpm install --frozen-lockfile",
+  "installCommand": "pnpm install --frozen-lockfile --prefer-frozen-lockfile",
   "buildCommand": "pnpm build",
   "outputDirectory": "frontend/dist",
   "devCommand": "pnpm --filter qc-diffusion-frontend dev",
