--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,15 +47,15 @@
     "@types/react-plotly.js": "2.6.4",
     "@types/three": "0.179.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "@vitest/ui": "3.2.4",
+    "@vitest/ui": "^0.34.6",
     "autoprefixer": "^10.4.20",
     "jsdom": "^24.0.0",
     "npm-run-all2": "8.0.4",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.3",
+    "typescript": "^5.8.2",
     "vite": "7.1.5",
-    "vitest": "3.2.4"
+    "vitest": "^0.34.6"
   },
   "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
