--- a/packages/graph-ui/package.json
+++ b/packages/graph-ui/package.json
@@ -38,15 +38,16 @@
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.54.0",
+    "eslint": "^9.0.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "tsup": "^8.0.1",
     "typescript": "^5.3.2",
     "vite": "^5.0.4",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "@vitest/ui": "^0.34.6"
   }
 }
