--- a/packages/ts-quantum/package.json
+++ b/packages/ts-quantum/package.json
@@ -64,9 +64,10 @@
     "@types/node": "^20.0.0",
     "@vitest/coverage-v8": "^0.34.0",
     "esbuild": "^0.27.2",
-    "typedoc": "^0.25.13",
-    "typescript": "^5.0.0",
-    "vitest": "^0.34.0"
+    "typedoc": "^0.27.9",
+    "typescript": "^5.8.2",
+    "vitest": "^0.34.0",
+    "@vitest/ui": "^0.34.0"
   },
   "engines": {
     "node": ">=14.0.0"
