--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "plotly.js": "3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-grid-layout": "1.5.2",
     "react-plotly.js": "2.6.0",
     "react-resizable": "3.0.5",
