(fix)T29: Memory bank viewer bug fix
Fixed memory bank viewer not showing documents by implementing build-time copy of memory-bank folder

- Created frontend/scripts/copy-memory-bank.js to copy memory-bank from repo root to frontend/memory-bank at build time
- Updated frontend/package.json dev and build scripts to run copy script before Vite
- Updated frontend/.gitignore to exclude copied memory-bank folder
- Fixed frontend/src/memoryBank/hooks/useMemoryBankDocs.ts glob patterns to /memory-bank/**/*.md
- Removed interfering /memory-bank alias from frontend/vite.config.ts
- Updated memory bank documentation with bug fix details and current timestamps

Known issues / follow-ups
- None

Status
(100% complete - Bug fix complete, memory bank viewer now functional)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "node scripts/copy-memory-bank.js && vite",
+    "build": "node scripts/copy-memory-bank.js && tsc -b && vite build",
     "preview": "vite preview",
     "dev:full": "concurrently \"cd ../backend && source .venv/bin/activate && python main.py\" \"pnpm dev\"",
     "test": "pnpm exec vitest run",
