(docs)T32: Python Backend Environment Setup and Documentation
Add comprehensive Python backend development environment setup guide and documentation

- Created memory-bank/tasks/T32.md for Python backend environment setup task
- Created memory-bank/implementation-details/python-backend-environment-setup.md with conda/venv setup guide
- Modified frontend/package.json dev:full script to use conda run command for proper backend execution
- Updated memory-bank/implementation-details/vercel-deployment-plan.md with Python environment section
- Updated memory-bank task registry, session cache, and active context
- Created edit chunk file following memory bank template compliance

Known issues / follow-ups
- Test documented setup process for accuracy
- Consider additional troubleshooting guides as issues arise

Status
(100% complete - Documentation and task creation complete)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "node scripts/copy-memory-bank.js && vite",
     "build": "node scripts/copy-memory-bank.js && tsc -b && vite build",
     "preview": "vite preview",
-    "dev:full": "concurrently \"cd ../backend && source .venv/bin/activate && python main.py\" \"pnpm dev\"",
+    "dev:full": "concurrently \"cd ../backend && conda run -n qc-diff python main.py\" \"pnpm dev\"",
     "test": "pnpm exec vitest run",
     "test:watch": "vitest --watch",
     "clean": "rm -rf node_modules dist"
